--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.21.0"
   }
 }
