--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.21.0"
+    "prisma": "^5.21.0",
+    "serverless-http": "^3.2.0"
   }
 }
