menambah prisma generate di netlify.toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,8 @@
 [build]
-functions = "netlify/functions"
+  command = "npm install && npx prisma generate"
+  functions = "netlify/functions"
+  publish = "public"
+  package = "@netlify/plugin-cache-clear"
 
 [[redirects]]
   from = "/*"
