--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "mqtt": "^5.10.1",
     "prisma": "^5.21.0",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "socket.io": "^4.8.1"
   }
 }
