--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.21.0",
+    "@prisma/client": "^6.0.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mqtt": "^5.10.1",
-    "prisma": "^5.21.0",
+    "prisma": "^6.0.1",
     "serverless-http": "^3.2.0",
     "socket.io": "^4.8.1"
   }
