implement file upload functionality with multer and update routes for photo uploads

--- a/.env.development
+++ b/.env.development
@@ -1,8 +1,4 @@
-PORT=3000
-JWT_SECRET=caskjhcskajhiucag7812
+PORT=4000
 DATABASE_URL=postgresql://postgres:123456@localhost:5432/comvis
-# MQTT_BROKER=mqtt://localhost:1883
-MQTT_BROKER=f2427b6795414aa39ffb0f297736c0c8.s1.eu.hivemq.cloud
-MQTT_PORT = 8883
-MQTT_USERNAME = "muhammadRizki12"
-MQTT_PASSWORD = "Kucinghitam12"
+MQTT_BROKER=mqtt://localhost:1883
+MQTT_PORT = 1883
