--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mqtt": "^5.10.1",
+    "multer": "^1.4.5-lts.1",
     "prisma": "^6.0.1",
     "serverless-http": "^3.2.0",
     "socket.io": "^4.8.1"
