--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@prisma/client": "^6.0.1",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "cuid": "^3.0.0",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
