--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/client": "^6.0.1",
     "bcrypt": "^5.1.1",
+    "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "cuid": "^3.0.0",
     "date-fns-tz": "^3.2.0",
